first time try out with grid system

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="./dist/css/app.css">
   </head>
   <body>
-    <div class="container p-y-3">
-      <h1>Hello World</h1>
+    <div class="container-fluid">
+      <div class="row">
+        <div style="background:#eee;height:200px;" class="col-md-4"></div>
+        <div style="background:#000;height:200px;" class="col-md-4"></div>
+        <div style="background:#eee;height:200px;" class="col-md-4"></div>
+      </div>
     </div>
   </body>
 </html>
