--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--  link(href='./dist/css/bootstrap-ie9.css', rel='stylesheet')-->
     <!--  script(src='https://cdn.jsdelivr.net/g/html5shiv@3.7.3')-->
     <!--if lt IE 9-->
-    <!--  link(href='./dist/bootstrap-ie8.css', rel='stylesheet')-->
+    <!--  link(href='./dist/css/bootstrap-ie8.css', rel='stylesheet')-->
   </head>
   <body>
     <div class="container-fluid">
