--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Github Pages</title>
-    <link rel="stylesheet" href="./dist/css/app.css">
-    <!--
-    [if IE]
+    <link rel="stylesheet" href="./dist/css/app.css"><!--[if IE]>
     <link href="./dist/css/bootstrap-ie9.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/g/html5shiv@3.7.3"></script>
-    [endif]
-    [if lt IE 9]
+    <![endif]-->
+    <!--[if lt IE 9]>
     <link href="./dist/css/bootstrap-ie8.css" rel="stylesheet">
-    [endif]
-    -->
+    <![endif]-->
   </head>
   <body>
     <div class="container-fluid">
