--- a/index.html
+++ b/index.html
@@ -17,108 +17,237 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+     <a class="navbar-brand" href="#">Dashboard</a>
+     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+       <span class="navbar-toggler-icon"></span>
+     </button>
 
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
+     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+       <ul class="navbar-nav mr-auto">
+         <li class="nav-item active">
+           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#">Settings</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#">Profile</a>
+         </li>
+         <li class="nav-item">
+           <a class="nav-link" href="#">Help</a>
+         </li>
+       </ul>
+       <form class="form-inline mt-2 mt-md-0">
+         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+       </form>
+     </div>
+   </nav>
 
-      <div class="container">
+   <div class="container-fluid">
+     <div class="row">
+       <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+         <ul class="nav nav-pills flex-column">
+           <li class="nav-item">
+             <a class="nav-link active" href="#">Overview <span class="sr-only">(current)</span></a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#">Reports</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#">Analytics</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#">Export</a>
+           </li>
+         </ul>
 
-        <div class="row row-offcanvas row-offcanvas-right">
+         <ul class="nav nav-pills flex-column">
+           <li class="nav-item">
+             <a class="nav-link" href="#">Nav item</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#">Nav item again</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#">One more nav</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#">Another nav item</a>
+           </li>
+         </ul>
 
-          <div class="col-12 col-md-9">
-            <p class="float-right hidden-md-up">
-              <button type="button" class="btn btn-primary btn-sm" data-toggle="offcanvas">Toggle nav</button>
-            </p>
-            <div class="jumbotron">
-              <h1>Hello, world!</h1>
-              <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
-            </div>
-            <div class="row">
-              <div class="col-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div><!--/span-->
-              <div class="col-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div><!--/span-->
-              <div class="col-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div><!--/span-->
-              <div class="col-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div><!--/span-->
-              <div class="col-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div><!--/span-->
-              <div class="col-6 col-lg-4">
-                <h2>Heading</h2>
-                <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-                <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-              </div><!--/span-->
-            </div><!--/row-->
-          </div><!--/span-->
+         <ul class="nav nav-pills flex-column">
+           <li class="nav-item">
+             <a class="nav-link" href="#">Nav item again</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#">One more nav</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#">Another nav item</a>
+           </li>
+         </ul>
+       </nav>
 
-          <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
-            <div class="list-group">
-              <a href="#" class="list-group-item active">Link</a>
-              <a href="#" class="list-group-item">Link</a>
-              <a href="#" class="list-group-item">Link</a>
-              <a href="#" class="list-group-item">Link</a>
-              <a href="#" class="list-group-item">Link</a>
-              <a href="#" class="list-group-item">Link</a>
-              <a href="#" class="list-group-item">Link</a>
-              <a href="#" class="list-group-item">Link</a>
-              <a href="#" class="list-group-item">Link</a>
-              <a href="#" class="list-group-item">Link</a>
-            </div>
-          </div><!--/span-->
-        </div><!--/row-->
+       <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+         <h1>Dashboard</h1>
 
-        <hr>
+         <section class="row text-center placeholders">
+           <div class="col-6 col-sm-3 placeholder">
+             <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+             <h4>Label</h4>
+             <div class="text-muted">Something else</div>
+           </div>
+           <div class="col-6 col-sm-3 placeholder">
+             <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+             <h4>Label</h4>
+             <span class="text-muted">Something else</span>
+           </div>
+           <div class="col-6 col-sm-3 placeholder">
+             <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+             <h4>Label</h4>
+             <span class="text-muted">Something else</span>
+           </div>
+           <div class="col-6 col-sm-3 placeholder">
+             <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+             <h4>Label</h4>
+             <span class="text-muted">Something else</span>
+           </div>
+         </section>
 
-        <footer>
-          <p>&copy; Company 2017</p>
-        </footer>
-
-      </div><!--/.container-->
+         <h2>Section title</h2>
+         <div class="table-responsive">
+           <table class="table table-striped">
+             <thead>
+               <tr>
+                 <th>#</th>
+                 <th>Header</th>
+                 <th>Header</th>
+                 <th>Header</th>
+                 <th>Header</th>
+               </tr>
+             </thead>
+             <tbody>
+               <tr>
+                 <td>1,001</td>
+                 <td>Lorem</td>
+                 <td>ipsum</td>
+                 <td>dolor</td>
+                 <td>sit</td>
+               </tr>
+               <tr>
+                 <td>1,002</td>
+                 <td>amet</td>
+                 <td>consectetur</td>
+                 <td>adipiscing</td>
+                 <td>elit</td>
+               </tr>
+               <tr>
+                 <td>1,003</td>
+                 <td>Integer</td>
+                 <td>nec</td>
+                 <td>odio</td>
+                 <td>Praesent</td>
+               </tr>
+               <tr>
+                 <td>1,003</td>
+                 <td>libero</td>
+                 <td>Sed</td>
+                 <td>cursus</td>
+                 <td>ante</td>
+               </tr>
+               <tr>
+                 <td>1,004</td>
+                 <td>dapibus</td>
+                 <td>diam</td>
+                 <td>Sed</td>
+                 <td>nisi</td>
+               </tr>
+               <tr>
+                 <td>1,005</td>
+                 <td>Nulla</td>
+                 <td>quis</td>
+                 <td>sem</td>
+                 <td>at</td>
+               </tr>
+               <tr>
+                 <td>1,006</td>
+                 <td>nibh</td>
+                 <td>elementum</td>
+                 <td>imperdiet</td>
+                 <td>Duis</td>
+               </tr>
+               <tr>
+                 <td>1,007</td>
+                 <td>sagittis</td>
+                 <td>ipsum</td>
+                 <td>Praesent</td>
+                 <td>mauris</td>
+               </tr>
+               <tr>
+                 <td>1,008</td>
+                 <td>Fusce</td>
+                 <td>nec</td>
+                 <td>tellus</td>
+                 <td>sed</td>
+               </tr>
+               <tr>
+                 <td>1,009</td>
+                 <td>augue</td>
+                 <td>semper</td>
+                 <td>porta</td>
+                 <td>Mauris</td>
+               </tr>
+               <tr>
+                 <td>1,010</td>
+                 <td>massa</td>
+                 <td>Vestibulum</td>
+                 <td>lacinia</td>
+                 <td>arcu</td>
+               </tr>
+               <tr>
+                 <td>1,011</td>
+                 <td>eget</td>
+                 <td>nulla</td>
+                 <td>Class</td>
+                 <td>aptent</td>
+               </tr>
+               <tr>
+                 <td>1,012</td>
+                 <td>taciti</td>
+                 <td>sociosqu</td>
+                 <td>ad</td>
+                 <td>litora</td>
+               </tr>
+               <tr>
+                 <td>1,013</td>
+                 <td>torquent</td>
+                 <td>per</td>
+                 <td>conubia</td>
+                 <td>nostra</td>
+               </tr>
+               <tr>
+                 <td>1,014</td>
+                 <td>per</td>
+                 <td>inceptos</td>
+                 <td>himenaeos</td>
+                 <td>Curabitur</td>
+               </tr>
+               <tr>
+                 <td>1,015</td>
+                 <td>sodales</td>
+                 <td>ligula</td>
+                 <td>in</td>
+                 <td>libero</td>
+               </tr>
+             </tbody>
+           </table>
+         </div>
+       </main>
+     </div>
+   </div>
 
   <!-- Bootstrap core JavaScript
   ================================================== -->
