--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Github Pages</title>
     <link rel="stylesheet" href="./dist/css/app.css">
-    <link rel="stylesheet" href="./dist/css/dashboard.css"><!--[if IE]>
+    <link rel="stylesheet" href="./dist/css/dashboard.css">
+    <!--[if IE]>
     <link href="./dist/css/bootstrap-ie9.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/g/html5shiv@3.7.3"></script>
     <![endif]-->
